--- a/src/app/components/review.module.css
+++ b/src/app/components/review.module.css
@@ -1,5 +1,5 @@
 .review {
-  height: 300px;
+  height: 400px;
   width: 300px;
   padding: 20px 10px;
   border: 1px solid white;
@@ -8,4 +8,10 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+}
+.reviews {
+  display: flex;
+  gap: 40px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
